feat: better search for similar documents