@@ -13,10 +13,12 @@ import java.util.*;
 import java.util.stream.Collectors;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
 @Component
 @RequiredArgsConstructor
+@Slf4j
 public class ImplRetrieveDocumentPort implements RetrieveDocumentPort {
 
     private final JpaFieldRepository fieldRepository;
@@ -27,49 +29,101 @@ public class ImplRetrieveDocumentPort implements RetrieveDocumentPort {
         List<DocumentSearch>
     > searchBySimilarity(SearchQuery query) {
         return Try.of(() -> {
-            var results = fieldRepository.searchBySimilarity(
+            var similarDocuments = fieldRepository.findSimilarDocuments(
                 query.embedding(),
                 query.fieldType(),
                 query.threshold(),
                 query.limit()
             );
 
-            var accumulator = new LinkedHashMap<
-                UUID,
-                DocumentSearchAccumulator
-            >();
+            log.info(
+                "similar documents return from database: {}",
+                similarDocuments
+            );
 
-            for (var row : results) {
-                var documentID = row.getId();
-                accumulator
-                    .computeIfAbsent(documentID, id ->
-                        new DocumentSearchAccumulator(
-                            id,
-                            row.getTitle(),
-                            row.getSimilarity(),
-                            row.getCreatedAt(),
-                            row.getUpdatedAt()
-                        )
-                    )
-                    .addAuthor(
-                        row.getAuthorFirstName(),
-                        row.getAuthorLastName(),
-                        row.getAuthorEmail()
-                    );
+            if (similarDocuments.isEmpty()) {
+                return Collections.<DocumentSearch>emptyList();
             }
 
-            return accumulator
-                .values()
+            var documentsIds = similarDocuments
                 .stream()
-                .map(DocumentSearchAccumulator::build)
-                .collect(Collectors.toList());
+                .map(JpaFieldRepository.DocumentSimilarityResult::getDocumentId)
+                .toList();
+
+            var displayFields = List.of("title", "abstract");
+            var displayData = fieldRepository.getDocumentDisplayData(
+                documentsIds,
+                displayFields
+            );
+
+            return buildDocumentSearchResults(similarDocuments, displayData);
         })
             .toEither()
             .mapLeft(t ->
                 new RetrieveDocumentError.ServiceUnavailableError(
-                    "Failed to retrieve documents: " + t.getMessage()
+                    "Failed to retrieve documents: " + t
                 )
             );
+    }
+
+    private List<DocumentSearch> buildDocumentSearchResults(
+        List<JpaFieldRepository.DocumentSimilarityResult> similarDocuments,
+        List<JpaFieldRepository.DocumentDisplayResult> displayData
+    ) {
+        var dataByDocument = displayData
+            .stream()
+            .collect(
+                Collectors.groupingBy(
+                    JpaFieldRepository.DocumentDisplayResult::getId
+                )
+            );
+
+        var accumulator = new LinkedHashMap<UUID, DocumentSearchAccumulator>();
+
+        for (var document : similarDocuments) {
+            var id = document.getDocumentId();
+            var data = dataByDocument.get(id);
+            if (data != null && !data.isEmpty()) {
+                var firstRow = data.getFirst();
+                var title = data
+                    .stream()
+                    .filter(d -> "title".equals(d.getFieldType()))
+                    .map(JpaFieldRepository.DocumentDisplayResult::getTitle)
+                    .findFirst()
+                    .orElse("Unknown");
+
+                accumulator.put(
+                    id,
+                    new DocumentSearchAccumulator(
+                        id,
+                        title,
+                        document.getMaxSimilarity(),
+                        firstRow.getFilePath(),
+                        firstRow.getCreatedAt(),
+                        firstRow.getUpdatedAt()
+                    )
+                );
+
+                data
+                    .stream()
+                    .filter(d -> d.getAuthorFirstName() != null)
+                    .forEach(d ->
+                        accumulator
+                            .get(id)
+                            .addAuthor(
+                                d.getAuthorFirstName(),
+                                d.getAuthorLastName(),
+                                d.getAuthorEmail()
+                            )
+                    );
+            }
+        }
+
+        return accumulator
+            .values()
+            .stream()
+            .map(DocumentSearchAccumulator::build)
+            .collect(Collectors.toList());
     }
 
     @Getter
@@ -79,6 +133,7 @@ public class ImplRetrieveDocumentPort implements RetrieveDocumentPort {
         private final UUID id;
         private final String title;
         private final Float similarity;
+        private final String filePath;
         private final Set<Author> authors = new LinkedHashSet<>();
         private final Instant createdAt;
         private final Instant updatedAt;
@@ -95,6 +150,7 @@ public class ImplRetrieveDocumentPort implements RetrieveDocumentPort {
                 title,
                 similarity,
                 new ArrayList<>(authors),
+                filePath,
                 createdAt,
                 updatedAt
             );
